--- a/assets/scss/component/_header.scss
+++ b/assets/scss/component/_header.scss
@@ -1,7 +1,7 @@
  header{
     height: 80px;
     width: 100%;
-    border-bottom: 1px solid #E5E5E5;
+    border-bottom: 2px solid rgba(229, 229, 229,.2);
     position: absolute;
     z-index: 99;
     .container{
@@ -42,11 +42,11 @@
                     align-items: center;
                     gap: 50px;
                     font-style: normal;
-                    font-weight: 500;
-                    font-size: 24px;
+                    font-weight: 400;
                     line-height: 100%;
                     height: 80px;    
                     .navItem{
+                        font-size: 18px;
                         .navLink{
                             color: $white-hover;
                             transition: all .3s;
