--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -17,6 +17,12 @@ a{
     width: 1200px;
     margin: auto;
 }
+.row{
+    margin-top: 128px;
+}
+body{
+    height: 3000px;
+}
 // colors
 $primary-color:#2094e6;
 $hover-btn:#145788;
