--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -18,6 +18,14 @@ a {
   margin: auto;
 }
 
+.row {
+  margin-top: 128px;
+}
+
+body {
+  height: 3000px;
+}
+
 header {
   height: 80px;
   width: 100%;
@@ -186,4 +194,81 @@ header .container .navBar .nav-right .contact .contact-link:hover {
 }
 #home .container .home-words .started:hover {
   background-color: #145788;
+}
+
+#about .container .row .about-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 145px;
+}
+#about .container .row .about-container .about-imgs .about-img-top {
+  width: 557px;
+  height: 405px;
+  position: relative;
+}
+#about .container .row .about-container .about-imgs .about-img-top img {
+  width: 100%;
+  height: 100%;
+}
+#about .container .row .about-container .about-imgs .about-img-top .about-img-bottom {
+  width: 386px;
+  height: 263px;
+  position: absolute;
+  bottom: -132px;
+  right: -100px;
+}
+#about .container .row .about-container .about-imgs .about-img-top .about-img-bottom img {
+  width: 100%;
+  height: 100%;
+}
+#about .container .row .about-container .about-words {
+  width: 486px;
+  padding-top: 30px;
+}
+#about .container .row .about-container .about-words .about-title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: #2094e6;
+  margin-bottom: 10px;
+}
+#about .container .row .about-container .about-words .title {
+  font-weight: 500;
+  font-size: 45px;
+  line-height: 60px;
+  color: #121212;
+  margin-bottom: 20px;
+}
+#about .container .row .about-container .about-words .description {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  color: #333;
+  margin-bottom: 20px;
+}
+#about .container .row .about-container .about-words .started {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 35px;
+  padding: 0 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #2094e6;
+  color: #fff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+#about .container .row .about-container .about-words .started:hover {
+  background-color: #145788;
+}
+#about .container .row .about-container .about-words .started img {
+  width: 11px;
+  height: 10px;
+  margin-left: 10px;
 }/*# sourceMappingURL=main.css.map */
