--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -17,8 +17,8 @@ a{
     width: 1200px;
     margin: auto;
 }
-.row{
-    margin-top: 128px;
+html{
+    scroll-behavior: smooth;
 }
 body{
     height: 3000px;
