--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,5 +2,7 @@
 @import "./component/header"; 
 @import "./component/home";
 @import "./component/about";
-@import "./component/whyUs"
+@import "./component/whyUs";
+@import "./component/trips"
+
 
