--- a/assets/scss/component/_about.scss
+++ b/assets/scss/component/_about.scss
@@ -1,5 +1,5 @@
 #about{
-    padding-top: 138px;
+    padding-top: 128px;
     .container{
         .row{
             .about-container{
@@ -28,28 +28,15 @@
                     }
                 }
                 .about-words{
-                    width: 486px;
-                    padding-top: 30px;
+                    @include section-words;
                     .about-title{
-                        font-weight: 500;
-                        font-size: 18px;
-                        line-height: 24px;
-                        color: $primary-color;
-                        margin-bottom: 10px;
+                        @include section-title;
                     }
                     .title{
-                        font-weight: 500;
-                        font-size: 45px;
-                        line-height: 60px;
-                        color: $head-color;
-                        margin-bottom: 20px;
+                        @include title;
                     }
                     .description{
-                        font-weight: 400;
-                        font-size: 18px;
-                        line-height: 150%;
-                        color: $p-color;
-                        margin-bottom: 20px;
+                        @include description;
                     }
                     .started{
                         @include button;
