--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,6 +3,7 @@
 @import "./component/home";
 @import "./component/about";
 @import "./component/whyUs";
-@import "./component/trips"
+@import "./component/trips";
+@import "./component/whatSay";
 
 
