--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -411,6 +411,11 @@ header .container .navBar .nav-right .contact .contact-link:hover {
 #whatSay .container .row .whatSay-container .whatSay-words .reviews:hover {
   background-color: #145788;
 }
+#whatSay .container .row .whatSay-container .whatSay-words .reviews img {
+  width: 11px;
+  height: 10px;
+  margin-left: 10px;
+}
 #whatSay .container .row .whatSay-container .whatSay-img {
   width: 578px;
   height: 386px;
@@ -418,4 +423,90 @@ header .container .navBar .nav-right .contact .contact-link:hover {
 #whatSay .container .row .whatSay-container .whatSay-img img {
   width: 100%;
   height: 100%;
+}
+
+#explore {
+  padding-top: 128px;
+}
+#explore .explore-bg {
+  background-image: url("../image/image 8.png");
+}
+#explore .explore-bg .container .row {
+  height: 525px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+#explore .explore-bg .container .row .explore-container {
+  width: 690px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+#explore .explore-bg .container .row .explore-container .about-title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: #2094e6;
+  margin-bottom: 10px;
+}
+#explore .explore-bg .container .row .explore-container .title {
+  font-weight: 500;
+  font-size: 45px;
+  line-height: 60px;
+  color: #121212;
+  margin-bottom: 20px;
+  color: #fff;
+}
+#explore .explore-bg .container .row .explore-container .description {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+  color: #333;
+  margin-bottom: 20px;
+  color: #fff;
+  margin-bottom: 29px;
+}
+#explore .explore-bg .container .row .explore-container .started {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 35px;
+  padding: 0 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #2094e6;
+  color: #fff;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+#explore .explore-bg .container .row .explore-container .started:hover {
+  background-color: #145788;
+}
+#explore .explore-bg .container .row .explore-container .started img {
+  width: 11px;
+  height: 10px;
+  margin-left: 10px;
 }/*# sourceMappingURL=main.css.map */
